[package]
name = "os-timer"
version = "1.0.10"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "OS Timers for Rust "
readme = "README.md"
repository = "https://github.com/DoumanAsh/os-timer"
license = "BSL-1.0"
keywords = ["timer"]
categories = ["no-std"]
include = [
    "**/*.rs",
    "**/*.c",
    "Cargo.toml",
    "README.md"
]

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "ios"))))'.dependencies.libc]
version = "0.2"
default-features = false

[build-dependencies.cc]
package = "cc"
version = "1"
